@@ -7,6 +7,7 @@
 
 ---0.2.0
 - Updated for 0.15
+- Tweaked chest replication slightly
 
 ---0.1.0
 - First release
